@@ -1377,6 +1377,11 @@ d-i grub-installer/with_other_os boolean true
 #d-i grub-installer/password-crypted password [MD5 hash]
 </screen></informalexample>
 
+# Use the following option to add additional boot parameters for the
+# installed system (if supported by the bootloader installer).
+# Note: options passed to the installer will be added automatically.
+#d-i debian-installer/add-kernel-opts string nousb
+
 <para>
 
 An MD5 hash for a password for <classname>grub</classname> can be generated
